--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <ul class="main-nav">
                 <li><a href="index.html" class="activo" aria-current="page">Inicio</a></li>
                 <li><a href="pages/productos.html">Productos</a></li>
-                <li><a href="pages/ofertas.html">Ofertas</a></li>
+                <li><a href="pages/preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
                 <li><a href="pages/quienes-somos.html">Quiénes Somos</a></li>
                 <li><a href="pages/contacto.html">Contacto</a></li>
             </ul>
