--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -17,7 +17,7 @@
             <ul class="main-nav">
                 <li><a href="../index.html">Inicio</a></li>
                 <li><a href="productos.html">Productos</a></li>
-                <li><a href="ofertas.html">Ofertas</a></li>
+                <li><a href="preguntas-frecuentes.html">Preguntas Frecuentes</a></li>
                 <li><a href="quienes-somos.html" class="activo" aria-current="page">Quiénes Somos</a></li>
                 <li><a href="contacto.html">Contacto</a></li>
             </ul>
