Subida final para entrega

--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Grupo ViCo</title>
+    <title>Inicio - Grupo VICO</title>
+    <meta name="description" content="Grupo ViCo - Distribuidora de confianza de productos de ferretería y papelería. Conocé nuestras promociones y productos destacados.">
     <link rel="icon" href="img/favicon.png" type="image/png">
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -11,7 +12,8 @@
     <header>
         <div class="header-bar">
             <img src="img/grupovico-1.png" alt="Logo Grupo ViCo" class="logo-img">
-            <span class="titulo-vico">Grupo ViCo</span>
+            <h1 class="titulo-vico"><span class="titulo-grupo">Grupo</span> <span class="titulo-vico-bold">VICO</span>
+            </h1>
         </div>
         <nav class="navbar">
             <div class="menu-toggle" id="menu-toggle">☰
@@ -28,14 +30,14 @@
 
     <main>
         <section class="bienvenida">
-            <h2>Bienvenido a Grupo ViCo</h2>
+            <h2>Bienvenido a Grupo VICO</h2>
             <p>Tu distribuidora de confianza.</p>
         </section>
 
         <section class="promociones-bancarias">
             <h3>Promociones Bancarias</h3>
             <div class="promo-contenedor">
-                <img src="img/MP.png" alt="Promoción bancaria con Mercado Pago">
+                <img src="img/mp.png" alt="Promoción bancaria con Mercado Pago">
             </div>
         </section>
 
@@ -44,12 +46,12 @@
             <div class="secciones-container">
                 <a href="pages/productos.html?categoria=ferreteria" class="seccion ferreteria-contenedor" style="text-decoration:none; color:inherit;">
                     <div class="img-container">
-                        <img src="img/Ferreteria.png" alt="Productos de ferretería">
+                        <img src="img/ferreteria.png" alt="Productos de ferretería">
                     </div>
                 </a>
                 <a href="pages/productos.html?categoria=papeleria" class="seccion papeleria-contenedor" style="text-decoration:none; color:inherit;">
                     <div class="img-container">
-                        <img src="img/Papel.png" alt="Productos de Papeleria">
+                        <img src="img/papel.png" alt="Productos de Papeleria">
                     </div>
                 </a>
             </div>
@@ -59,7 +61,7 @@
         <section class="productos-destacados">
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="img/Amoladora Angular 115mm 820w Black Decker G720n Color Naranja.png" alt="Amoladora">
+                    <img src="img/amoladora-black-decker.png" alt="Amoladora">
                     <h4>Amoladora</h4>
                     <p>Amoladora Angular 115mm 820w Black Decker G720n Color Naranja.</p>
                 </div>
@@ -67,7 +69,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="img/Lijadora Orbital 200w Black and Decker.png" alt="Lijadora Orbital 200w 1/4 Hoja Black & Decker Bs200 Black + Decker Bs200-ar 220V">
+                    <img src="img/lijadora-Orbital-blackdecker.png" alt="Lijadora Orbital 200w 1/4 Hoja Black & Decker Bs200 Black + Decker Bs200-ar 220V">
                     <h4>Lijadora Orbital Black & Decker</h4>
                     <p>Lijadora Orbital 200w 1/4 Hoja.</p>
                 </div>
@@ -75,7 +77,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="img/HOJA SIMPLE X 30.jpeg" alt="Papel Higiénico simple hoja x 30 metros">
+                    <img src="img/hoja-simple.jpeg" alt="Papel Higiénico simple hoja x 30 metros">
                     <h4>Papel Higiénico</h4>
                     <p>Elegante Simple Hoja - Suavidad y Absorción.</p>
                 </div>
@@ -83,7 +85,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="img/ROLLO COCINA ELEGANTE 3x50 PAÑOS.jpeg" alt="Rollo de Cocina Elegante- 50 paños por rollo">
+                    <img src="img/rollo3x50.jpeg" alt="Rollo de Cocina Elegante- 50 paños por rollo">
                     <h4>Rollo de Cocina</h4>
                     <p>Rollo De Cocina Elegante 50 paños por rollo - Super absorbente.</p>
                 </div>
@@ -98,7 +100,7 @@
             <img src="img/face.jpeg" alt="Logo de Facebook">
         </a>
         <a href="https://instagram.com/" target="_blank" rel="noopener">
-            <img src="img/Insta.jpg" alt="Logo de Instagram">
+            <img src="img/insta.jpg" alt="Logo de Instagram">
         </a>
         <a href="https://youtube.com/" target="_blank" rel="noopener">
             <img src="img/youtube.png" alt="Logo de YouTube">
