--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Grupo ViCo</title>
+    <title>Contacto - Grupo VICO</title>
+    <meta name="description" content="Contactá a Grupo ViCo para consultas sobre productos de ferretería y papelería. Estamos para ayudarte.">
+    <meta name="keywords" content="contacto, Grupo ViCo, ferretería, papelería, consultas">
     <link rel="icon" href="../img/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -12,7 +14,8 @@
         <!-- Header unificado con logo a la izquierda y nombre centrado -->
         <div class="header-bar">
             <img src="../img/grupovico-1.png" alt="Logo Grupo ViCo" class="logo-img">
-            <span class="titulo-vico">Grupo ViCo</span>
+            <h1 class="titulo-vico"><span class="titulo-grupo">Grupo</span> <span class="titulo-vico-bold">VICO</span>
+            </h1>
         </div>
         <nav class="navbar">
             <div class="menu-toggle" id="menu-toggle">☰
@@ -68,7 +71,7 @@
             <img src="../img/face.jpeg" alt="Facebook">
         </a>
         <a href="https://instagram.com/" target="_blank" rel="noopener">
-            <img src="../img/Insta.jpg" alt="Instagram">
+            <img src="../img/insta.jpg" alt="Instagram">
         </a>
         <a href="https://youtube.com/" target="_blank" rel="noopener">
             <img src="../img/youtube.png" alt="YouTube">
