--- a/pages/preguntas-frecuentes.html
+++ b/pages/preguntas-frecuentes.html
@@ -3,7 +3,8 @@
     <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Preguntas Frecuentes - Grupo ViCo</title>
+    <title>Preguntas Frecuentes - Grupo VICO</title>
+    <meta name="description" content="Resolvemos tus dudas frecuentes sobre envíos, métodos de pago y ubicación física en Grupo ViCo, tu distribuidora confiable." />
     <link rel="icon" href="../img/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/styles.css">
     </head>
@@ -11,7 +12,8 @@
     <header>
         <div class="header-bar">
             <img src="../img/grupovico-1.png" alt="Logo Grupo ViCo" class="logo-img">
-            <span class="titulo-vico">Grupo ViCo</span>
+            <h1 class="titulo-vico"><span class="titulo-grupo">Grupo</span> <span class="titulo-vico-bold">VICO</span>
+            </h1>
         </div>
         <nav class="navbar">
         <div class="menu-toggle" id="menu-toggle">☰
@@ -43,7 +45,7 @@
     <footer>
         <p>Seguinos en nuestras redes:</p>
         <a href="https://facebook.com/" target="_blank"><img src="../img/face.jpeg" alt="Facebook de Grupo ViCo"></a>
-        <a href="https://instagram.com/" target="_blank"><img src="../img/Insta.jpg" alt="Instagram de Grupo ViCo"></a>
+        <a href="https://instagram.com/" target="_blank"><img src="../img/insta.jpg" alt="Instagram de Grupo ViCo"></a>
         <a href="https://youtube.com/" target="_blank"><img src="../img/youtube.png" alt="YouTube de Grupo ViCo"></a>
     </footer>
     <script>
