--- a/pages/quienes-somos.html
+++ b/pages/quienes-somos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Quiénes Somos - Grupo ViCo</title>
+    <title>Quiénes Somos - Grupo VICO</title>
+    <meta name="description" content="Conocé Grupo ViCo, empresa familiar con más de 8 años dedicada a la distribución de productos de ferretería y papelería en Zona Oeste. Calidad y confianza.">
     <link rel="icon" href="../img/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -12,7 +13,8 @@
         <!-- Header unificado con logo a la izquierda y nombre centrado -->
         <div class="header-bar">
             <img src="../img/grupovico-1.png" alt="Logo Grupo ViCo" class="logo-img">
-            <span class="titulo-vico">Grupo ViCo</span>
+            <h1 class="titulo-vico"><span class="titulo-grupo">Grupo</span> <span class="titulo-vico-bold">VICO</span>
+            </h1>
         </div>
         <nav class="navbar">
             <div class="menu-toggle" id="menu-toggle">☰
@@ -30,18 +32,12 @@
     <main>
         <section class="quienes-somos">
             <h2>Sobre Nosotros</h2>
-            <img src="../img/Familiar.png" alt="Nuestro equipo" class="imagen-redonda">
-            <p>
-                En Grupo ViCo somos una empresa familiar con más de 8 años de experiencia en el rubro, dedicada a la distribución de productos de ferretería y papel en la Zona Oeste. Nuestro compromiso con la calidad, la atención, la personalización y la confianza nos ha permitido consolidarnos como referentes en el sector, acompañando a nuestros clientes en el crecimiento de sus negocios y hogares.
-                <br><br>
-                Desde nuestros inicios, apostamos por la cercanía con quienes nos eligen. Cada integrante de nuestro equipo comparte los valores de responsabilidad, honestidad y esfuerzo que nos identifican como una familia y como empresa.
-                <br><br>
-                Sabemos que cada cliente es único, por eso nos esforzamos en brindar soluciones a medida, asesoramiento profesional y un trato humano en cada contacto.
-                <br><br>
-                Ofrecemos un amplio catálogo de productos de primeras marcas, garantizando stock permanente y entregas rápidas. Trabajamos tanto con comercios como con consumidores finales, adaptándonos a las necesidades de cada uno y manteniendo siempre la mejor relación precio-calidad.
-                <br><br>
-                En Grupo ViCo creemos en el valor de la palabra, el trabajo bien hecho y la construcción de relaciones a largo plazo. Por eso, día a día renovamos nuestro compromiso de seguir creciendo junto a vos, aportando nuestro conocimiento y dedicación para que siempre encuentres lo que necesitas.
-            </p>
+            <img src="../img/familiar.png" alt="Foto del equipo de Grupo ViCo" class="imagen-redonda">
+            <p>En Grupo VICO somos una empresa familiar con más de 8 años de experiencia en el rubro, dedicada a la distribución de productos de ferretería y papel en la Zona Oeste. Nuestro compromiso con la calidad, la atención, la personalización y la confianza nos ha permitido consolidarnos como referentes en el sector, acompañando a nuestros clientes en el crecimiento de sus negocios y hogares.</p>
+            <p>Desde nuestros inicios, apostamos por la cercanía con quienes nos eligen. Cada integrante de nuestro equipo comparte los valores de responsabilidad, honestidad y esfuerzo que nos identifican como una familia y como empresa.</p>
+            <p>Sabemos que cada cliente es único, por eso nos esforzamos en brindar soluciones a medida, asesoramiento profesional y un trato humano en cada contacto.</p>
+            <p>Ofrecemos un amplio catálogo de productos de primeras marcas, garantizando stock permanente y entregas rápidas. Trabajamos tanto con comercios como con consumidores finales, adaptándonos a las necesidades de cada uno y manteniendo siempre la mejor relación precio-calidad.</p>
+            <p>En Grupo VICO creemos en el valor de la palabra, el trabajo bien hecho y la construcción de relaciones a largo plazo. Por eso, día a día renovamos nuestro compromiso de seguir creciendo junto a vos, aportando nuestro conocimiento y dedicación para que siempre encuentres lo que necesitas.</p>
         </section>
     </main>
 
@@ -51,7 +47,7 @@
             <img src="../img/face.jpeg" alt="Facebook">
         </a>
         <a href="https://instagram.com/" target="_blank" rel="noopener">
-            <img src="../img/Insta.jpg" alt="Instagram">
+            <img src="../img/insta.jpg" alt="Instagram">
         </a>
         <a href="https://youtube.com/" target="_blank" rel="noopener">
             <img src="../img/youtube.png" alt="YouTube">
