--- a/pages/productos.html
+++ b/pages/productos.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Productos - Grupo ViCo</title>
+    <title>Productos - Grupo VICO</title>
+    <meta name="description" content="Catálogo de productos de ferretería y papelería de Grupo ViCo. Descubrí herramientas, papeles y más con precios y detalles.">
     <link rel="icon" href="../img/favicon.png" type="image/png">
     <link rel="stylesheet" href="../css/styles.css">
 </head>
@@ -11,7 +12,8 @@
     <header>
         <div class="header-bar">
             <img src="../img/grupovico-1.png" alt="Logo Grupo ViCo" class="logo-img">
-            <span class="titulo-vico">Grupo ViCo</span>
+            <h1 class="titulo-vico"><span class="titulo-grupo">Grupo</span> <span class="titulo-vico-bold">VICO</span>
+            </h1>
         </div>
         <nav class="navbar">
             <div class="menu-toggle" id="menu-toggle">☰
@@ -35,7 +37,7 @@
         <section class="productos">
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/Amoladora Angular 115mm 820w Black Decker G720n Color Naranja.png" alt="Amoladora">
+                    <img src="../img/amoladora-black-decker.png" alt="Amoladora">
                     <h4>Amoladora</h4>
                     <p>Amoladora Angular 115mm 820w Black Decker G720n Color Naranja.</p>
                 </div>
@@ -43,7 +45,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/Caja Juego Set Tubo 26 Encastre  1 Pulgada Camion Gomer.JPG" alt="Set de llaves tubo - Caja Juego Set Tubo 26 Encastre  1 Pulgada Camion Gomer ">
+                    <img src="../img/set-tubo.JPG" alt="Set de llaves tubo - Caja Juego Set Tubo 26 Encastre  1 Pulgada Camion Gomer ">
                     <h4>Llaves Tubo</h4>
                     <p>Caja Juego Set Tubo 26 Encastre 3/4 1 Pulgada.</p>
                 </div>
@@ -51,7 +53,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/Electrosierra Motosierra Lusqtoff 2000w Espada 40cm Esl200-8 Color Anaranjado.png" alt="Electrosierra Lusqtoff 2000w Espada 40cm Color naranja">
+                    <img src="../img/electrosierra-motosierra-lusqtoff.png" alt="Electrosierra Lusqtoff 2000w Espada 40cm Color naranja">
                     <h4>Motosierra Lusqtoff</h4>
                     <p>Electrosierra Motosierra Lusqtoff 2000w.</p>
                 </div>
@@ -59,7 +61,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/ESTACION DE SOLDADO LUSQTOFF.JPG" alt="ESTACIÓN DE SOLDADO LUSQTOFF Modelo: ES3L45-8 Frecuencia: 50Hz Tamaño: 120 x 193 x 170 mm Peso: 1,80 Kg">
+                    <img src="../img/estacion-soldado-lusqtoff.JPG" alt="ESTACIÓN DE SOLDADO LUSQTOFF Modelo: ES3L45-8 Frecuencia: 50Hz Tamaño: 120 x 193 x 170 mm Peso: 1,80 Kg">
                     <h4>Soldadora</h4>
                     <p>ESTACIÓN DE SOLDADO LUSQTOFF Modelo: ES3L45-8.</p>
                 </div>
@@ -67,7 +69,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/Hidrolavadora de alta presion daewoo.jpg" alt="Hidrolavadora Daewoo DAX21-150 - Voltaje: 220V ">
+                    <img src="../img/hidrolavadora-daewoo.jpg" alt="Hidrolavadora Daewoo DAX21-150 - Voltaje: 220V ">
                     <h4>Hidrolavadora Daewoo</h4>
                     <p>Hidrolavadora de Alta Presión Daewoo DAX21-150.</p>
                 </div>
@@ -75,7 +77,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/JUEGO DE LLAVES ALLEN TORX T10.JPG" alt="Llaves Allen Acero Hexagonal Milimétricas TORX T10 A T15">
+                    <img src="../img/juego-llaves-allen.JPG" alt="Llaves Allen Acero Hexagonal Milimétricas TORX T10 A T15">
                     <h4>Juego de Llaves Allen IEUSEW</h4>
                     <p>Juego de Llaves Allen torx T10 a T15.</p>
                 </div>
@@ -83,7 +85,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/Juego De Pinzas Para Seguros Seguer X4 Mecanico E1.JPG" alt="Juego De Pinzas Para Seguros Seguer X4 Eurotech 7 pulgadas">
+                    <img src="../img/juego-pinzas-seguros-seguer.JPG" alt="Juego De Pinzas Para Seguros Seguer X4 Eurotech 7 pulgadas">
                     <h4>Juego de Pinzas Seguer</h4>
                     <p>Juego de Pinzas Seguer x4 Eurotech 7 pulgadas.</p>
                 </div>
@@ -91,7 +93,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/JUEGO DE TUBOS BAHCO S138- TORQUIMETRO ENCASTRE.JPG" alt="Juego Tubos Bahco Crique Bocallave 3/8 En Pulgada 33 Piezas">
+                    <img src="../img/juego-tubos-bahco.JPG" alt="Juego Tubos Bahco Crique Bocallave 3/8 En Pulgada 33 Piezas">
                     <h4>Juego de Tubos BAHCO</h4>
                     <p>Juego de Llaves Tubos Bahco Crique Bocallave 3/8.</p>
                 </div>
@@ -99,7 +101,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/Lijadora Orbital 200w Black and Decker.png" alt="Lijadora Orbital 200w 1/4 Hoja Black & Decker Bs200 Black + Decker Bs200-ar 220V">
+                    <img src="../img/lijadora-Orbital-blackdecker.png" alt="Lijadora Orbital 200w 1/4 Hoja Black & Decker Bs200 Black + Decker Bs200-ar 220V">
                     <h4>Lijadora Orbital Black & Decker</h4>
                     <p>Lijadora Orbital 200w 1/4 Hoja.</p>
                 </div>
@@ -107,7 +109,7 @@
             </div>
             <div class="producto ferreteria">
                 <div class="contenido-producto">
-                    <img src="../img/Metro De Madera Carpintero 2 Mts Sola Plegable Madera Haya.JPG" alt="Metro De Madera Carpintero 2 Mts Sola Plegable">
+                    <img src="../img/metro-madera-carpintero.JPG" alt="Metro De Madera Carpintero 2 Mts Sola Plegable">
                     <h4>Metro de Madera</h4>
                     <p>Metro de madera Plegable 2Mts.</p>
                 </div>
@@ -115,7 +117,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/HOJA SIMPLE X 30.jpeg" alt="Papel Higiénico simple hoja x 30 metros">
+                    <img src="../img/hoja-simple.jpeg" alt="Papel Higiénico simple hoja x 30 metros">
                     <h4>Papel Higiénico</h4>
                     <p>Elegante Simple Hoja - Suavida y Absorción.</p>
                 </div>
@@ -123,7 +125,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/DOBLE HOJA X 30.jpeg" alt="Papel Higiénico doble hoja x 30 metros">
+                    <img src="../img/doble-hojax30.jpeg" alt="Papel Higiénico doble hoja x 30 metros">
                     <h4>Papel Higiénico</h4>
                     <p>Elegante Doble Hoja - Mas Suavidad, Mas Absorción.</p>
                 </div>
@@ -131,7 +133,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/HIGIÉNICO 4X80.jpeg" alt="Papel Higiénico simple hoja ultra blanco x 80 metros">
+                    <img src="../img/higienico4x80.jpeg" alt="Papel Higiénico simple hoja ultra blanco x 80 metros">
                     <h4>Papel Higiénico</h4>
                     <p>Elegante Simple Hoja - Enriquecido con extracto de algodón, textura suave y delicada.</p>
                 </div>
@@ -139,7 +141,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/HIGIÉNICO 6X30 CON ALOE.jpeg" alt="Papel Higiénico simple hoja con aloe vera">
+                    <img src="../img/higienico-con-aloe.jpeg" alt="Papel Higiénico simple hoja con aloe vera">
                     <h4>Papel Higiénico</h4>
                     <p>Elegante Simple Hoja - Con Aloe Vera  6 rollos.</p>
                 </div>
@@ -147,7 +149,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/HIGIÉNICO 4x30 TRIPLE HOJA.jpeg" alt="Papel Higiénico triple hoja x 20 mentros">
+                    <img src="../img/triplehoja.jpeg" alt="Papel Higiénico triple hoja x 20 mentros">
                     <h4>Papel Higiénico</h4>
                     <p>Elegante Triple Hoja - Extra confort y Suavidad de Pétalos.</p>
                 </div>
@@ -155,7 +157,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/ROLLO DICHA X 12.jpeg" alt="Rollo De Cocina Dicha Absorbente 40 Paños">
+                    <img src="../img/rollo-dicha.jpeg" alt="Rollo De Cocina Dicha Absorbente 40 Paños">
                     <h4>Rollo de Cocina</h4>
                     <p>Rollo De Cocina Dicha 40 Paños Pack 3 Rollos.</p>
                 </div>
@@ -163,7 +165,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/ROLLO COCINA ELEGANTE 3x50 PAÑOS.jpeg" alt="Rollo de Cocina Elegante- 50 paños por rollo">
+                    <img src="../img/rollo3x50.jpeg" alt="Rollo de Cocina Elegante- 50 paños por rollo">
                     <h4>Rollo de Cocina</h4>
                     <p>Rollo De Cocina Elegante 50 paños por rollo - Super absorbente.</p>
                 </div>
@@ -171,7 +173,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/ROLLO 3X100 PAÑOS.jpeg" alt="Rollo de Cocina Elegante Premium - 100 paños por rollo">                
+                    <img src="../img/rollo3x100.jpeg" alt="Rollo de Cocina Elegante Premium - 100 paños por rollo">                
                     <h4>Rollo de Cocina</h4>
                     <p>Rollo De Cocina Elegante 100 paños por rollo - Premium Super absorbente.</p>
                 </div>
@@ -179,7 +181,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/ROLLO 3X120 PAÑOS.jpeg" alt="Rollo de Cocina Elegante Premium - 120 paños por rollo - Mega rollo de cocina">
+                    <img src="../img/rollo3x120.jpeg" alt="Rollo de Cocina Elegante Premium - 120 paños por rollo - Mega rollo de cocina">
                     <h4>Rollo de Cocina</h4>
                     <p>Rollo De Cocina Elegante 120 paños por rollo - Premium Ultra absorbente.</p>
                 </div>
@@ -187,7 +189,7 @@
             </div>
             <div class="producto papeleria">
                 <div class="contenido-producto">
-                    <img src="../img/ROLLO COCINA ELEGANTE 12X200 PAÑOS.jpeg" alt="Rollo de Cocina Elegante Gigante - 200 paños por rollo - Rollo de cocina Doble hoja">
+                    <img src="../img/rollo1x200.jpeg" alt="Rollo de Cocina Elegante Gigante - 200 paños por rollo - Rollo de cocina Doble hoja">
                     <h4>Rollo de Cocina</h4>
                     <p>Rollo De Cocina Elegante 200 paños por rollo - Doble hoja - Mayor rendimiento.</p>
                 </div>
@@ -219,7 +221,7 @@
             <img src="../img/face.jpeg" alt="Facebook">
         </a>
         <a href="https://instagram.com/" target="_blank" rel="noopener">
-            <img src="../img/Insta.jpg" alt="Instagram">
+            <img src="../img/insta.jpg" alt="Instagram">
         </a>
         <a href="https://youtube.com/" target="_blank" rel="noopener">
             <img src="../img/youtube.png" alt="YouTube">
